import grpc
import threading
from protos import raft_pb2, raft_pb2_grpc
from storage import Storage

class RaftNode(raft_pb2_grpc.RaftNodeServicer):
    def __init__(self, node_id, node_addresses):
        self.node_id = node_id
        self.node_addresses = node_addresses
        self.storage = Storage(node_id)
        # Initialize Raft state and leader lease

    def AppendEntries(self, request, context):
        # Handle AppendEntries RPC
        # Process incoming entries, update log, and respond accordingly

    def RequestVote(self, request, context):
        # Handle RequestVote RPC
        # Vote for candidate or deny based on Raft rules

    def ServeClient(self, request, context):
        # Handle client requests (GET and SET)
        # Redirect client to leader if necessary
        # Replicate SET requests to other nodes
        # Return GET response if leader and lease acquired

    # Other helper methods for Raft state machine, leader election, log replication, etc.